--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+__pycache__
 *.py[cod]
 *$py.class
 
 # C extensions
 *.so
+
+
 
 # the documentation build
 docs/source/_build
